--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests /deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests /deployment.yml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spring-boot-app
+  name: spring-petclinc
   labels:
-    app: spring-boot-app
+    app: spring-petclinc
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: spring-boot-app
+      app: spring-petclinc
   template:
     metadata:
       labels:
-        app: spring-boot-app
+        app: spring-petclinc
     spec:
       containers:
-      - name: spring-boot-app
-        image: abhishekf5/ultimate-cicd:replaceImageTag
+      - name: spring-petclinc
+        image: rathaiah/spring-petclinic:5
         ports:
         - containerPort: 8080
